test/spec_vectors/type-subtyping/fail/module_73.wat
(module (type $a (sub (struct (field (mut (ref any)))))) (type $b (sub $a (struct (field (ref any))))))